# bynoemie-rag

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.production  README.md  api.py  app.py  docker-compose.yml  env_setup.py  init_database.py  main.py  output.json  pyproject.toml  quickstart.bat  quickstart.sh  requirements.txt  setup.py  test.ipynb
.streamlit/: secrets.toml
config/: __init__.py  logging_config.yaml  model_config.yaml  prompt_templates.yaml
data/chromadb/: chroma.sqlite3
data/orders/: sample_orders.json
data/policies/: policies.json
data/products/: bynoemie_products.json
data/stock/: stock_inventory.json
data/users/: sample_users.json
docs/: CLOUD_SECRETS.md  DEPLOYMENT.md  FAILED_QUERY_ANALYSIS.md  INTERVIEW_GUIDE.md
examples/: basic_completion.py  chain_prompts,py  chat_session.py
notebooks/: prompt_testing.ipynb
scripts/: process_products.py  run_evaluation.py  scrape_policies.py
src/: __init__.py  agents.py  data_manager.py  orders.py  policy_rag.py
src/evaluation/: __init__.py
src/handlers/: __init__.py  error_handler.py
src/llm/: __init__.py  anthropic_client.py  base.py  groq_client.py  ollama_client.py  openai_client.py  utils.py
src/prompt_engineering/: __init__.py  chainer.py  few_shot.py  templates.py
src/rag/: __init__.py  data_processor.py  database.py
src/utils/: cache.py  logger.py  rate_limiter.py  scaper.py  scraper.py  secrets.py  token_counter.py
src/vibe_generator/: __init__.py  rules.py  workflow.py
static/: index.html
